[project]
name = "experimentos"
version = "0.1.0"
description = "isso ai"
authors = [
    {name = "Jackson",email = "samuel.jackson@aluno.ufca.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
